New features:
- Added support for LZW stream filter.

Improvements:
- Uniformized --verbose and --debug options.

---------------------
Version 0.3.1 (beta):
---------------------

New features:
- Added the 'ui' command, an interactive user interface in console based on
  ncurses.

Bugfixes:
- Added sanity checks if a non-existing file or directory is given as argument.

-------------------
Version 0.3 (beta):
-------------------

Breaking changes:
- Strings containing non-ASCII characters are now printed in hexadecimal
  format.

New features:
- Added support for encrypted files.
- Added validation of content streams.
- Added the 'findref' command to find all references to an object.
- Added the 'findname' command to find all occurrences of a PDF name.
- Added --merge-content-stream option to the 'cleanup' command to merge content
  stream arrays in pages.
- Added --simplify-info option to the 'cleanup' command to remove non-standard
  fields from the /Info dictionary.
- Added --remove-ptex option to the 'cleanup' command to recursively remove all
  dictionary keys starting with '/PTEX.'.
- Added --allow-nonascii-in-names option to allow names to contain non-ASCII
  characters instead of the corresponding escape sequence.
- Added --allow-overlaps option to allow several objects to overlap in a file.
- Added --xref-stream-default-zero option to use a default value of 0 when the
  last field is not present in xref stream entries.
- When available, the 'stats' command also outputs main metadata from the /Info
  dictionary (/Producer, /Creator, /CreationDate and /ModDate) and /Encrypt
  dictionary (/V, /R, /U, /O, /ID).

Improvements:
- Added type checking of functions (see PDF reference 7.10).

Misc:
- Improved error handling.
- Improved implementation of --undefined-ref-as-null option.

-------------------
Version 0.2 (beta):
-------------------

Breaking changes:
- Removed the parameter --stream-errors from the 'extract' command. This